--- a/shopping_site/css/try.html
+++ b/shopping_site/css/try.html
@@ -1,101 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="utf-8">
-  <title>Swiper demo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-
-  <!-- Link Swiper's CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-
-  <!-- Demo styles -->
-  <style>
-    html,
-    body {
-      position: relative;
-      height: 100%;
-    }
-
-    body {
-      background: #eee;
-      font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-      font-size: 14px;
-      color: #000;
-      margin: 0;
-      padding: 0;
-    }
-
-    .swiper-container {
-      width: 90%;
-      height: 400px;
-      margin: 0 auto;
-    }
-
-    .swiper-slide {
-      text-align: center;
-      font-size: 18px;
-      background: #fff;
-        max-width: 400px;
-        min-width: 400px;
-
-      /* Center slide text vertically */
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: -webkit-flex;
-      display: flex;
-      -webkit-box-pack: center;
-      -ms-flex-pack: center;
-      -webkit-justify-content: center;
-      justify-content: center;
-      -webkit-box-align: center;
-      -ms-flex-align: center;
-      -webkit-align-items: center;
-      align-items: center;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
-
 <body>
-  <!-- Swiper -->
-  <div class="swiper-container">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide">Slide 1</div>
-      <div class="swiper-slide">Slide 2</div>
-      <div class="swiper-slide">Slide 3</div>
-      <div class="swiper-slide">Slide 4</div>
-      <div class="swiper-slide">Slide 5</div>
-      <div class="swiper-slide">Slide 6</div>
-      <div class="swiper-slide">Slide 7</div>
-      <div class="swiper-slide">Slide 8</div>
-      <div class="swiper-slide">Slide 9</div>
-      <div class="swiper-slide">Slide 10</div>
-    </div>
-    <!-- Add Pagination -->
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-pagination"></div>
+  <div class="par">
+    bagmati
+    <center>
+      <div class="ch">location1</div>
+    <div class="ch">location2</div>
+    <div class="ch">location3</div>
+    </center>
+  </div>
+  <div class="par">
+    2
+    <center><div class="ch">1</div>
+      <div class="ch">2</div>
+      <div class="ch">3</div></center>
+  </div>
+  <div class="par">
+    3 
+    <center><div class="ch">1</div>
+      <div class="ch">2</div>
+      <div class="ch">3</div>
+    </center>
   </div>
 
-  <!-- Swiper JS -->
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
-  <!-- Initialize Swiper -->
-  <script>
-    var swiper = new Swiper('.swiper-container', {
-        updateOnWindowResize:true,
-        grabCursor:true,
-        shortSwipes:true,
-        // followFinger:true,
-        preventClicks:true,
- 
-        spaceBetween:10,
-        navigation: {
-        nextEl: '.swiper-button-next',
-        prevEl: '.swiper-button-prev',
-      },
-    });
-  </script>
 </body>
 
+<script>
+
+var par = document.querySelectorAll(".par");
+par.forEach(function (e,i) {
+  e.addEventListener("click",function(){
+
+var childens = e.children.item(0);
+for(j=0 ; j<childens.childElementCount; j++){
+childens.children.item(j).forEach(function (elem,insdex) {
+  elm.addEventListener("click",function () {
+    console.log(elm.innerHTML)
+  })
+})
+}
+  })
+})
+  
+</script>
 </html>
